# clipshare

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  clipshare.pro  clipshare.sln
.github/workflows/: ubuntu-build.yml
src/: .gitignore  Adapter.cpp  Adapter.h  ClipShareWindow.cpp  ClipShareWindow.h  ClipShareWindow.qrc  ClipShareWindow.ui  SingleApplication.cpp  SingleApplication.h  Utils.cpp  Utils.h  Utils_JsonConvert.cpp  Utils_JsonConvert.h  clipshare.cpp  clipshare.h  clipshare.pro  clipshare.qrc  clipshare.sln  clipshare.vcxproj  clipshare.vcxproj.filters  main.cpp
